<resources>
    <string name="app_name">Mr Jempoot</string>
    <string name="client_key_midtrans">SB-Mid-client-Vvt-lfkmuR_neS2f</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAjYi2xqtwO99lP2G1lE1wyA-f4c1YwBdY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="langsungdijempoot">#Langsungdijempoot</string>
    <string name="enable_location">Enable Location</string>
    <string name="tidak_punya_akun_daftar_sekarang">Tidak punya akun? <b>Daftar sekarang</b></string>
    <string name="gunakan_62_pada_nomor_telepon">Gunakan 62 pada nomor telepon</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sudah_punya_akun_mr_jempoot_masuk">Sudah punya akun Mr Jempoot? <font color="#F5FF00"><b>Masuk</b></font></string>
    <string name="saya_menyetujui_syarat_amp_ketentuan_yang_berlaku_di_mr_jempoot">Saya menyetujui <font color="#F5FF00"><b><u>Syarat &amp; Ketentuan</u></b></font> yang berlaku di Mr. Jempoot</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="daftar">Daftar</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="masukan_kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="kode_dikirim_melalui_sms_ke_nomor_handphone">Kode dikirim melalui SMS ke nomor handphone</string>
    <string name="harap_isi_kode_otp_untuk_verifikasi">Harap isi kode OTP untuk verifikasi</string>
    <string name="tidak_mendapatkan_kode">Tidak mendapatkan kode?</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="masuk_ke_akun_saya">Masuk ke Akun Saya</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="password_">Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="pilih_bahasa">Pilih Bahasa</string>
    <string name="_62">+62</string>
    <string name="bersenang_senang">Bersenang-senang</string>
    <string name="selamat">Selamat</string>
    <string name="yuk_lihat_rekomendasi_gopek_disekitarmu">Yuk lihat Rekomendasi Gopek disekitarmu</string>
    <string name="gopek_disekitar_kamu">Gopek Disekitar Kamu</string>
    <string name="pilih_makan_dan_minuman_favorit_kamu">Pilih Makan dan Minuman Favorit Kamu</string>
    <string name="gopek_favorit">Gopek Favorit</string>
    <string name="apa_yang_baru">Apa yang baru?</string>
    <string name="cari_makanan_amp_restoran_favoritmu"><![CDATA[Cari Makanan & Restoran Favoritmu]]></string>
    <string name="kamu_mau_pesan_napa">Kamu mau pesan\napa?</string>
    <string name="hai_saddam">Hai, Saddam</string>
    <string name="mendapatkan_alamat">Mendapatkan alamat....</string>
    <string name="pengiriman_ke">Pengiriman Ke</string>
    <string name="title_activity_goceng">GocengActivity</string>
    <string name="edit">Edit</string>
    <string name="jemput">Jemput</string>
    <string name="tujuan">Tujuan</string>
    <string name="konfirmasi_lokasi">Konfirmasi Lokasi</string>
    <string name="tulis_detail_alamat_kamu">Tulis Detail Alamat Kamu</string>
    <string name="detail_alamat">Detail Alamat*</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="tahan_dan_seret_marker_untuk_mendapatkan_alamat">Tahan dan Seret Marker untuk mendapatkan alamat</string>
    <string name="tulis_label_alamat_kamu_misalnya_rumah">Tulis label alamat kamu. Misalnya rumah</string>
    <string name="label_alamat">Label Alamat</string>
    <string name="catatan">Catatan</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="login_lebih_mudah_dengan_akun_google_dan_facebook">Login lebih mudah dengan akun Google dan Facebook</string>
    <string name="akun_terhubung">Akun Terhubung</string>
    <string name="ubah">Ubah</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="login">Login</string>
    <string name="bintang_">*********</string>
    <string name="google">Google</string>
    <string name="sambungkan">Sambungkan</string>
    <string name="facebook">Facebook</string>
    <string name="dapatkan_notifikasi_tentang_promo_dan_lainnya">Dapatkan Notifikasi tentang Promo dan Lainnya</string>
    <string name="terima_pesan_di_handphone_kamu">Terima pesan di handphone kamu</string>
    <string name="dd_mm_yyyyy">dd/mm/yyyyy</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="tidak_ingin_menyebutkan">Tidak Ingin Menyebutkan</string>
    <string name="lainnya">Lainnya</string>
    <string name="perempuan">Perempuan</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="faq">FAQ</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="hapus">Hapus</string>
    <string name="alamat_tersimpan">Alamat Tersimpan</string>
    <string name="top_up_saldo">Top Up Saldo</string>
    <string name="plus">+</string>
    <string name="top_up_sekarang_juga_jempootpay_kamu">Top up Sekarang juga! JempootPay kamu</string>
    <string name="jangan_sampai_saldo_kamu_kosong_ya_supaya_kamu_bisa_terus_bertransaksi_di_aplikasi_kami_minimal_top_up_rp_10_000">*Jangan sampai saldo kamu kosong ya, Supaya kamu bisa terus bertransaksi di aplikasi kami. Minimal top up Rp 10.000</string>
    <string name="input_nominal">Input Nominal</string>
    <string name="tulis_nominal_disini">tulis nominal disini</string>
    <string name="rp_10_000">Rp. 10.000</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="rp_100_000">Rp. 100.000</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="rp_300_000">Rp. 300.000</string>
    <string name="rp_500_000">Rp. 500.000</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="membership">Membership</string>
    <string name="tunjukkan_nbarcode">Tunjukkan\nBarcode</string>
    <string name="tunjukkan_nqr_code">Tunjukkan\nQR Code</string>
    <string name="data_member_card">Data Member Card</string>
    <string name="order_order">Order order</string>
    <string name="daftar_membership">Daftar Membership</string>
    <string name="referal">Referral</string>
    <string name="nomor_ktp_kamu">Nomor KTP kamu</string>
    <string name="upload_ktp">Upload KTP*</string>
    <string name="pilih_tanggal_lahir">pilih tanggal lahir</string>
    <string name="pria">| Pria</string>
    <string name="wanita">| Wanita</string>
    <string name="lengkapi_data_berikut_ini">Lengkapi Data Berikut ini</string>
    <string name="no_ktp">No KTP*</string>
    <string name="ambil_foto_ktp">Ambil Foto KTP</string>
    <string name="foto_tidak_boleh_terlalu_gelap_atau_terang">Foto tidak boleh terlalu gelap atau terang</string>
    <string name="foto_tidak_boleh_buram">Foto tidak boleh buram</string>
    <string name="posisikan_ktp_didalam_garis_panduan">Posisikan KTP didalam Garis Panduan</string>
    <string name="yuk_simak_dulu_cara_mengambil_foto_ktp_yang_baik_dan_benar">Yuk simak dulu cara mengambil foto KTP yang baik dan benar</string>
    <string name="kode_pesanan_qwerty12345">Kode Pesanan: qwerty12345</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="tarif_jempoot_motorbike">Tarif Jempoot Motorbike</string>
    <string name="new_balis_black_and_white">New Balis\nBlack and White</string>
    <string name="pilih_kendaraan">Pilih Kendaraan</string>
    <string name="fasilitas_vip">Fasilitas VIP</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="air_conditioner">Air Conditioner</string>
    <string name="baterai_charger">Baterai Charger</string>
    <string name="silahkan_pilih_tambahan_fasilitasi_yang_kamu_butuhkan">Silahkan pilih tambahan fasilitasi yang kamu butuhkan</string>
    <string name="bar_table">Bar Table</string>
    <string name="bar_table2">Bar Table+</string>
    <string name="soft_drink">Soft Drink</string>
    <string name="extra_vip">Extra Vip</string>
    <string name="cash">Cash</string>
    <string name="jempoot_pay">Jempoot Pay</string>
    <string name="terapkan">Terapkan</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="detail_orderan">Detail Orderan</string>
    <string name="orderan">Orderan</string>
    <string name="rute">Rute</string>
    <string name="pilih_pembayaran">Pilih Pembayaran</string>
    <string name="tambahan_fasilitas">Tambahan Fasilitas</string>
    <string name="discount">Discount</string>
    <string name="tarif_driver">Tarif Driver</string>
    <string name="location">Location</string>
    <string name="pulang_pergi">Pulang Pergi</string>
    <string name="sekali_jalan">Sekali Jalan</string>
    <string name="waktu_dropoff">Waktu Dropoff :</string>
    <string name="jarak">Jarak</string>
    <string name="metode_pembayaran">Metode Pembayaran:</string>
    <string name="tarif_drive">Tarif Drive:</string>
    <string name="destinaion">Destinaion</string>
    <string name="pesan_driver">Pesan Driver</string>
    <string name="hasil_pencarian">Hasil Pencarian</string>
    <string name="item_minuman">Item Minuman</string>
    <string name="item_makanan">Item Makanan</string>
    <string name="menu_home">Home</string>
    <string name="history">History</string>
    <string name="wishlist">Wishlist</string>
    <string name="ditemukan">Ditemukan</string>
    <string name="pilihan_bahasa">Pilihan Bahasa</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="chinese">中文</string>
    <string name="belum_ada_pesanan_nih_ndi_keranjang_kamu">Belum ada pesanan nih,\ndi keranjang kamu</string>
    <string name="keranjang_order">Keranjang Order</string>
    <string name="alamat_restoran">Alamat Restoran</string>
    <string name="dikirim">Dikirim</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="ringkasan_pembayaran">Ringkasan Pembayaran</string>
    <string name="total_harga">Total Harga</string>
    <string name="biaya_platform">Biaya Platform</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="voucher_diskon">Voucher Diskon</string>
    <string name="total_pembayaran">Total Pembayaran</string>

    <string-array name="metode">
        <item>Jempoot Pay</item>
        <item>Cash</item>
    </string-array>
</resources>