<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kuning3">


    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_red"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:paddingVertical="@dimen/dimen_20dp">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="24dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_bold"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:text="@string/extra_vip"
            android:textColor="@color/kuning"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bottom2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pesanVip"
        android:layout_below="@id/bar"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/pilih_kendaraan"
            android:textColor="@color/red2"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgKendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/billis1"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:button="@null"
                android:drawableTop="@drawable/ballis_1"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:paddingHorizontal="@dimen/dimen_10dp"
                android:text="@string/new_balis_black_and_white"
                android:textColor="@color/red2"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/billis2"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:button="@null"
                android:drawableTop="@drawable/ballis_2"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/new_balis_black_and_white"
                android:textColor="@color/red2"
                android:textStyle="bold" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/fasilitas_vip"
            android:textColor="@color/red2"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgFasilitasVIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/wifi"
                android:fontFamily="@font/poppins"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:backgroundTint="@color/red2"
                android:button="@null"
                android:textSize="11sp"
                android:drawableTop="@drawable/wifi"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/free_wifi"
                android:textColor="@color/kuning" />

            <RadioButton
                android:id="@+id/charger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:backgroundTint="@color/red2"
                android:button="@null"
                android:drawableTop="@drawable/charger"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/baterai_charger"
                android:textColor="@color/kuning" />

            <RadioButton
                android:id="@+id/ac"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="11sp"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:backgroundTint="@color/red2"
                android:button="@null"
                android:drawableTop="@drawable/ac"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/air_conditioner"
                android:textColor="@color/kuning" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text="@string/tambahan_fasilitas"
            android:textColor="@color/red2"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/silahkan_pilih_tambahan_fasilitasi_yang_kamu_butuhkan"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/rgTambahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/softDrink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_2dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_white_border_red"
                android:button="@null"
                android:drawableTop="@drawable/softdrink"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/soft_drink"
                android:textColor="@color/red2"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/barTable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_white_border_red"
                android:button="@null"
                android:drawableTop="@drawable/bar_table"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/bar_table"
                android:textColor="@color/red2"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/barTable2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_5dp"
                android:layout_marginEnd="@dimen/dimen_2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:background="@drawable/bg_white_border_red"
                android:button="@null"
                android:drawableTop="@drawable/bar_table_1"
                android:drawablePadding="@dimen/dimen_10dp"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/bar_table2"
                android:textColor="@color/red2"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/pesanVip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginHorizontal="@dimen/dimen_30dp"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:backgroundTint="@color/red2"
        android:text="Pesan VIP"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>
