<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kuning3">


    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_red"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/dimen_20dp"
        android:paddingVertical="@dimen/dimen_20dp">

        <ImageView
            android:id="@+id/finish"
            android:layout_width="24dp"
            android:layout_height="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/alamat_tersimpan"
            android:textColor="@color/kuning"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bottom2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedAddress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tambahAlamat"
        android:layout_below="@id/bar"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:paddingHorizontal="@dimen/dimen_20dp"
        tools:listitem="@layout/item_adapter_saved_address" />

    <Button
        android:id="@+id/tambahAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:fontFamily="@font/poppins_bold"
        android:backgroundTint="@color/black2"
        android:text="@string/tambah_alamat"
        android:textAllCaps="false"
        android:textColor="@color/kuning" />

</RelativeLayout>
